force-app/main/default/objects/Field_Mapping__mdt/Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Specifies field mappings for the HR Case Management Portal</description>
    <label>Field Mapping (mine)</label>
    <pluralLabel>Field Mappings</pluralLabel>
</CustomObject>