force-app/main/default/objects/Field_Mapping__mdt/fields/From_Field__c.field-meta.xml
<CustomField>
    <fullName>From_Field__c</fullName>
    <inlineHelpText>Must be the API name for the field</inlineHelpText>
    <label>From Field</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>