force-app/main/default/objects/Field_Mapping__mdt/fields/From_Object__c.field-meta.xml
<CustomField>
    <fullName>From_Object__c</fullName>
    <label>From Object</label>
    <picklist>
        <picklistValues>
            <fullName>Case</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>User</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Contact</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Case_Summary__c</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Charge__c</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EEO_Detail__c</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Witness__c</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Similarly_Treated_Ind__c</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>