force-app/main/default/objects/Field_Mapping__mdt/fields/Optional_Change_From_E1__c.field-meta.xml
<CustomField>
    <fullName>Optional_Change_From_E1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Change From E1</label>
    <type>Checkbox</type>
</CustomField>