force-app/main/default/objects/Field_Mapping__mdt/fields/Processes__c.field-meta.xml
<CustomField>
    <fullName>Processes__c</fullName>
    <description>Each field mapping can be part of many processes as long as the process from and to object are the same. Each process must be separated by a carriage return. For a list of processes please see the Case Process Mapping custom metadata type</description>
    <inlineHelpText>Each field mapping can be part of many processes as long as the process from and to object are the same. Each process must be separated by a carriage return. For a list of processes please see the Case Process Mapping custom metadata type</inlineHelpText>
    <label>Processes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>