force-app/main/default/objects/Field_Mapping__mdt/fields/To_Field__c.field-meta.xml
<CustomField>
    <fullName>To_Field__c</fullName>
    <inlineHelpText>Must be the API name for the field</inlineHelpText>
    <label>To Field</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>